Removed reference to slider.jpg, which was causing an extra 23kb to download pointlessly

--- a/content/css/less/smart.less
+++ b/content/css/less/smart.less
@@ -249,7 +249,7 @@ header {
 
 
 #page-title {
-  background: url("@{imgbase}slider.jpg");
+  /* background: url("@{imgbase}slider.jpg");*/
   display: block;
   margin-bottom: 25px;
   position: relative;
