Removed unused plain css files; moved remaining to /less

--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -21,18 +21,18 @@ html(lang="en" class="no-js")
     meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
   
     link href="/css/less/site.css" rel="stylesheet"
-    link href="/css/parallax-slider3.css" rel="stylesheet"
+    link href="/css/less/parallax-slider.css" rel="stylesheet"
 
     link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Economica:700,400italic|Droid+Serif|Boogaloo' 
 
     /[if IE 9]
-      link href="/css/styleie9.css" rel="stylesheet"
+      link href="/css/less/styleie9.css" rel="stylesheet"
 
     /[if IE 7]
       link href="/css/less/font-awesome-ie7.css"
 
     - if page.lib? :pricer
-      link rel="stylesheet" href="/css/pricer.css"
+      link rel="stylesheet" href="/css/less/pricer.css"
 
     link href="/atom.xml" rel="alternate" type="application/atom+xml"
 
