--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -12,8 +12,7 @@ h1 Licenses
       .container
         .row
           .span3
-            h2
-              i.ico-white.ico-notes
+            h2.without-icon
               | Licenses
           .span4
             markdown: 
