--- a/content/index.slim
+++ b/content/index.slim
@@ -9,54 +9,34 @@ h1 RESTful image processing
 == content_for :banner do
   .slider-wrapper
     #da-slider.da-slider
-      .da-slide
-        h2 Comprehensive image processing 
+
+      .da-slide.textual
+        h2 Blissfully compatible
         p
-          | Facial detection, redeye correction, RAW file development. World-class resizing is just the tip of the iceberg. 
-
-        a.da-link href="/" Read More
-        .da-img
-          img src="img/studiojs.png" alt="image01"
-      
-      .da-slide
-        h2 The future is dynamic
-        p Small businesses and large corprorations alike have have been trusting dynamic imaging software to simplify their image management for the last decade. Perhaps it's time you got on board.
-
-        a.da-link href="/" Read More
-        .da-img
-          img src="img/parallax-slider/5twitter.png" alt="image01"
-      .da-slide
-        h2 Prevent memory leaks
+          | Drop-in compatible with your existing website, CMS, servers, and dev tools. Accessible, stack-agnostic API.
+      .da-slide.textual
+        h2 Gratifying agility
+        p  
+          | Tweak size, cropping, and encoding in-page. Escape the endless edit-export-upload cycle! 
+          |  Conveniently mobile and retina-friendly.
+      .da-slide.textual
+        h2 Comprehensive and capable
         p
-          | Engineering the simplest image resizing system is error-prone, and even highly experienced developers invariably miss a memory-leak or two, which is catastrophic for a server. We try to maintain a <a href="http://nathanaeljones.com/163/20-image-resizing-pitfalls/">list of all the common pitfalls</a>, but it grows on a monthly basis.
-
-        a.da-link href="/" Read More
-        .da-img
-          img src="img/parallax-slider/resonsive.png" alt="image01"
-      .da-slide
-        h2 Affordable support
+          | ImageResizer offers facial detection, red-eye correction, RAW file development, seam carving, and object removal. 
+          | World-class resizing is just the tip of the iceberg. 
+  
+      .da-slide.textual
+        h2 Conveniently intuitive
         p
-          | Can't afford any mistakes? Ensure your content architecture is scalable and secure by having a 
-          strong 30-minute Q&A session with a engineer for just $70
-          | Get hotfixes within 3 business days  
-          a href="/support/contracts" with a support contract.
-
-
-        a.da-link href="/" Read More
-        .da-img
-          img src="img/parallax-slider/resonsive.png" alt="image01"
-      
-      .da-slide
+          | No reference manual needed; add commands to the end of your image URL. Order and casing doesn't matter, and every combination of commands 'just works'. 
+      .da-slide.textual
         h2 Extreme scalability
         p
           | A single server running ImageResizer Performance Edition can efficiently cache and serve up to a million unique images. Many of our clients use it with up to 10 million, but at that point we suggest a CDN, Varnish, or nginx cache.
 
-
-
-        a.da-link href="/" Read More
-        .da-img
-          img src="img/parallax-slider/resonsive.png" alt="image01"
-      
+      .da-slide.textual
+        h2 Enlighteningly open
+        p Everything we offer includes source code - and you're welcome to edit it. We reward pull requests and encourage community plugin development.
 
 hr
 
@@ -87,7 +67,7 @@ hr
             |  (see release notes and download page).
 
   .span2
-    h3 Installation
+    h3 Install
     ul.arrow_list
       li: a href="/docs/install/aspnet" Installation Guide for ASP.NET
       li: a href="/docs/nuget" Install with NuGet
@@ -96,7 +76,7 @@ hr
     a href="/docs" 
       | more...
   .span2
-    h3 How to...
+    h3 Learn
     ul.arrow_list
       li: a href="/docs/basics" Use the URL API
       li: a href="/docs/troubleshoote" Troubleshoot common issues
@@ -104,7 +84,7 @@ hr
     a href="/docs" 
       | more...
   .span3.tiny-news
-    h3 News: 
+    h3 News
     ul.arrow_list
       - for p in index.posts[0..5]
         li
@@ -227,8 +207,8 @@ hr
     .row
       .span3
         .picture
-          a href="http://london.msn.co.uk/" rel="image" title="MSN London Olympic Games 2012"
-            img src="http://placehold.it/270x180"
+          a href="/img/logos/Banner780.jpg" rel="image" title="MSN London Olympic Games 2012"
+            img src="/img/logos/Banner270.jpg"
             .image-overlay-zoom
         .item-description
           h4: a(href="#"): MSN Olympic Games 2012 Responsive
@@ -236,8 +216,8 @@ hr
           a href="http://www.netmagazine.com/features/how-we-built-msn-uks-responsive-olympics-site" How it was built
       .span3
         .picture
-          a href="http://placehold.it/270x180" rel="image" title="example goes here"
-            img src="http://placehold.it/270x180"
+           a href="/img/logos/Banner780.jpg" rel="image" title="MSN London Olympic Games 2012"
+            img src="/img/logos/Banner270.jpg"
             .image-overlay-zoom
         .item-description
           h4: a(href="#"): FluentExtensions
@@ -245,7 +225,7 @@ hr
       .span3
         .picture
           a href="http://placehold.it/270x180" rel="image" title="example goes here"
-            img src="http://placehold.it/270x180"
+            img src="/img/logos/Banner270.jpg"
             .image-overlay-zoom
         .item-description
           h4: a(href="#"): StudioJS
@@ -287,6 +267,7 @@ hr
 h3 Who uses ImageResizer?
 .clients-carousel
   ul.slides.clients
+    li: img src="/img/logos/collectiveli_256.png"
     li: img src="/img/logos/logo_mindrevolution_black.png"
     li: img src="http://s.stpost.com/img/sierra-logo.gif"
     li: img src="http://www.eksponent.com/Content/images/logo.png"
