--- a/content/css/less/parallax-slider.less
+++ b/content/css/less/parallax-slider.less
@@ -1,13 +1,3 @@
-@font-face {
-    font-family: 'BebasNeueRegular';
-    src: url('fonts/BebasNeue-webfont.eot');
-    src: url('fonts/BebasNeue-webfont-0.eot#iefix') format('embedded-opentype'),
-         url('fonts/BebasNeue-webfont.woff') format('woff'),
-         url('fonts/BebasNeue-webfont.ttf') format('truetype'),
-         url('fonts/BebasNeue-webfont.svg#BebasNeueRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 
 .da-slider{
   width: 100%;
@@ -15,7 +5,7 @@
   position: relative;
   margin: 0 auto;
   overflow: hidden;
-  background: transparent url(../img/slider-ny-new.jpg) repeat 0% 0%;
+  background: transparent url(../../img/slider-ny-new.jpg) repeat 0% 0%;
   border-bottom: 5px solid #f6f6f6 !important;
   -webkit-box-shadow: inset 0px 0px 5px rgba(0,0,0,.25);
   -moz-box-shadow: inset 0px 0px 5px rgba(0,0,0,.25);
@@ -64,9 +54,9 @@
 }
 .da-slide h2{
   color: #fff;
-  font-size: 66px;
+  font-size: 44px;
   width: 45%;
-  top: 60px;
+  top: 20px;
   white-space: nowrap;
   z-index: 10;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
@@ -82,14 +72,15 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3000000', endColorstr='#b3000000',GradientType=0 ); /* IE6-8 */
   width: 45%;
   padding: 28px 20px 18px 20px;
-  top: 156px;
+  padding-top:0px;
+  top: 116px;
   color: #fff;
   font-size: 18px;
   line-height: 26px;
-  height: 80px;
+  height: 100px;
   font-style: italic;
   font-family: 'Economica', Arial, sans-serif !important;
-  font-weight: 400;
+  font-weight: 800;
   font-style: italic;
   margin-left: -20px;
 }
