--- a/content/css/less/smart.less
+++ b/content/css/less/smart.less
@@ -1921,11 +1921,11 @@ li.current {
 #footer, 
 #footer p, 
 #footer a{ 
-  color: @o-text-color !important;
+  /*color: @o-text-color !important;*/
 }
 
 #footer a:hover {
-  color: #fff;
+  /*color: #fff;*/
 }
 
 .no-margin {margin-top: 0;}
