Finalized footer, fixed link appearance when entire home page blocks are clickable.

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -48,8 +48,12 @@ Layout: false
 
 
         h3 You're our sales team
-        p We don't advertise, and we don't have sales staff. We rely on word-of-mouth and personal reccomendation. 
-        p Tell your friends; preferably in person, but we've got some clichè social icons for you to click as well.
+        p We prefer to invest in engineering instead of advertising. 
+        p 
+          | Word-of-mouth is very important; tell your friends! Blogging about ImageResizer 
+          a href="/support" can earn you priority support
+          | .
+        h4 Last and least, the requisite clichè sharing icons:
 
 
         - if page.lib?('plusone')
