--- a/content/css/less/smart.less
+++ b/content/css/less/smart.less
@@ -721,6 +721,10 @@ html[xmlns] .slides {display: block;}
   float: left !important;
 }
 
+a .icons-box-vert p{
+  color: @o-text-color;
+}
+
 .icons-box-vert i {
   float: left;
 }
@@ -1922,6 +1926,10 @@ li.current {
 #footer p, 
 #footer a{ 
   /*color: @o-text-color !important;*/
+}
+
+#footer h4{
+  font-weight: bold !important;
 }
 
 #footer a:hover {
