Made first 6 blocks clickable, but they don't yet go anywhere

--- a/content/index.slim
+++ b/content/index.slim
@@ -78,7 +78,7 @@ hr
   .span2
     h3 Learn
     ul.arrow_list
-      li: a href="/docs/basics" Use the URL API
+      li: a href="/docs/basics" Basic commands
       li: a href="/docs/troubleshoot" Troubleshooting guide
 
     a href="/docs" 
@@ -165,35 +165,38 @@ hr
 .row
   .icons-box-vert-container
     .span4
-      .icons-box-vert
-        i.ico-white.circle-color-full.ico-link
-        .icons-box-vert-info
-          h3 Compatible with your CMS
-          markdown:
-            If your CMS doesn't already include ImageResizer, you can add it in minutes. Standard drop-in installation works with nearly every CMS, and [we have notes for the rest](/docs/workswith).
+      a href="/docs/compatible"
+        .icons-box-vert
+          i.ico-white.circle-color-full.ico-link
+          .icons-box-vert-info
+            h3 Compatible with your CMS
+            markdown:
+              If your CMS doesn't already include ImageResizer, you can add it in minutes. Standard drop-in installation works with nearly every CMS, and we have instructions for the rest.
+              
+          .clear
+    .span4
+      a href="/docs/single-source"
+        .icons-box-vert
+          i.ico-white.circle-color-full.ico-roundabout
+          .icons-box-vert-info
+            h3 Single-source imaging
+            markdown:
+              Single-source imaging is the only manageable solution for mobile and responsive websites.
+
+              Manual version management leads to medical bills.
+          .clear
+    .span4
+      a href="/docs/stable"
+        .icons-box-vert
+          i.ico-white.circle-color-full.ico-shield
+          .icons-box-vert-info
+            h3 Secure and stable
+            markdown:
+              Secure by default, ImageResizer protects againsts DDOS and XSS attacks and minimizes attack surface with a plugin model.
+
+              Unlike most imaging libraries, ImageResizer was designed for server-side use and multi-year uptimes since day 1.
             
-        .clear
-    .span4
-      .icons-box-vert
-        i.ico-white.circle-color-full.ico-roundabout
-        .icons-box-vert-info
-          h3 Single-source imaging
-          markdown:
-            Single-source imaging is the only manageable solution for mobile and responsive websites.
-
-            Manual version management leads to medical bills.
-        .clear
-    .span4
-      .icons-box-vert
-        i.ico-white.circle-color-full.ico-shield
-        .icons-box-vert-info
-          h3 Secure and stable
-          markdown:
-            Secure by default, ImageResizer protects againsts DDOS and XSS attacks and minimizes attack surface with a plugin model.
-
-            Unlike most imaging libraries, ImageResizer was designed for server-side use and multi-year uptimes since day 1.
-          
-        .clear
+          .clear
   .clear
 
 
@@ -201,37 +204,40 @@ hr
 .row
   .icons-box-vert-container
     .span4
-      .icons-box-vert
-        i.ico-white.circle-color-full.ico-roundabout
-        .icons-box-vert-info
-          h3 Achieve agility
-          markdown:
-             Stop the endless photoshop-upload-test cycle. With our simple API, images can be the easiest part of your job. 
+      a href="/docs/agile"
+        .icons-box-vert
+          i.ico-white.circle-color-full.ico-roundabout
+          .icons-box-vert-info
+            h3 Achieve agility
+            markdown:
+               Stop the endless photoshop-upload-test cycle. With our simple API, images can be the easiest part of your job. 
 
-             Tweak in your browser, not your desktop photo-editor.
-        .clear
+               Tweak in your browser, not your desktop photo-editor.
+          .clear
 
     .span4
-      .icons-box-vert
-        i.ico-white.circle-color-full.ico-stats
-        .icons-box-vert-info
-          h3 High performance
-          markdown:
-            Upgrade to the [Performance Edition](/plugins/editions/performance) and scale to millions of images and users. 
+      a href="/docs/performant"
+        .icons-box-vert
+          i.ico-white.circle-color-full.ico-stats
+          .icons-box-vert-info
+            h3 High performance
+            markdown:
+              Upgrade to the Performance Edition and scale to millions of images and users. 
 
-            Beyond that? We support Amazon CloudFront and Microsoft CDN, and you can use S3 or Azure for centralized image storage.
+              Beyond that? We support Amazon CloudFront and Microsoft CDN, and you can use S3 or Azure for centralized image storage.
 
-        .clear
+          .clear
     .span4
-      .icons-box-vert
-        i.ico-white.circle-color-full.ico-tint
-        .icons-box-vert-info
-          h3 Full imaging suite
-          markdown:
-            With the [Creative Edition](/plugins/editions/creative), you can unlock a comprehensive imaging suite. 
+      a href="/docs/comprehensive"
+        .icons-box-vert
+          i.ico-white.circle-color-full.ico-tint
+          .icons-box-vert-info
+            h3 Full imaging suite
+            markdown:
+              With the Creative Edition, you can unlock a comprehensive imaging suite. 
 
-            Bring clarity to your photos with the unsharp mask, white balance adjustment, noise removal, contrast, saturation, and brightness tools. Design text and image overlays, and apply sophisticated filters.
-        .clear
+              Bring clarity to your photos with the unsharp mask, white balance adjustment, noise removal, contrast, saturation, and brightness tools. Design text and image overlays, and apply sophisticated filters.
+          .clear
   .clear
 
 h3 Who uses ImageResizer?
@@ -254,7 +260,7 @@ hr
 .row
   .icons-box-vert-container
     .span4
-      .icons-box-vert
+     .icons-box-vert
         i.ico-white.circle-color-full.ico-group
         .icons-box-vert-info
           h3 Helpful community
@@ -270,7 +276,7 @@ hr
             Vendor lock-in is evil. We're working with others in the industry to standardize the RESTful Image API. [Read more at riapi.org](http://riapi.org)
           
         .clear
-    .span4
+    .span4      
       .icons-box-vert
         i.ico-cup.ico-white.circle-color-full
         .icons-box-vert-info
