Logos now colorize even when mouse is on padding instead of image

--- a/content/css/less/smart.less
+++ b/content/css/less/smart.less
@@ -1150,7 +1150,7 @@ input[type="button"] {
   background: #fafafa;
 }
 
-.clients-carousel li img:hover {
+.clients-carousel li img:hover, .clients-carousel li:hover img{
     filter: none;
     -webkit-filter: grayscale(0);
    -webkit-transform: scale(1);
